# brutyfi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  benchmark.sh  example_passwords.txt
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  update-bruteforce-wifi.yml
assets/: icon.icns
src/: app.rs  bruteforce.rs  cli.rs  crypto.rs  handshake.rs  main.rs  messages.rs  network.rs  password_gen.rs  platform.rs  security.rs  wifi.rs  workers.rs  workers_optimized.rs
src/core/: crypto.rs  handshake.rs  hashcat.rs  mod.rs  network.rs
src/handlers/: capture.rs  crack.rs  general.rs  mod.rs  navigation.rs  scan.rs
src/screens/: crack.rs  scan_capture.rs
