[package]
name = "bruteforce-wifi"
version = "1.0.0"
edition = "2021"
description = "Optimized WiFi bruteforce tool with wordlist and numeric combination support"
license = "MIT"
repository = "https://github.com/maxgfr/bruteforce-wifi"
authors = ["maxgfr"]

[[bin]]
name = "bruteforce-wifi"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
rayon = "1.8"
num_cpus = "1.16"
parking_lot = "0.12"
regex = "1.10"

# Cryptography for WPA/WPA2 handshake cracking
# Enable parallel features for SIMD optimizations
pbkdf2 = { version = "0.12", default-features = false, features = ["simple", "parallel"] }
hmac = "0.12"
sha1 = { version = "0.10", features = ["asm"] }
sha2 = { version = "0.10", features = ["asm"] }
md-5 = { version = "0.10", features = ["asm"] }
aes = { version = "0.8", features = ["hazmat"] }
cmac = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# PCAP file parsing
ctrlc = "3.5.1"
pcap = "2.4.0"

# System calls for macOS
libc = "0.2"

# GUI dependencies (Iced)
iced = { version = "0.13.1", features = ["tokio", "advanced"] }
rfd = "0.15"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = false
panic = "unwind"
overflow-checks = false
incremental = false
# Keep some debug info for error messages
debug = 1
debug-assertions = false
rpath = false

# Profile for development with some optimizations
[profile.dev]
opt-level = 1
lto = false
codegen-units = 256
incremental = true
debug = true

# Profile for benchmarking with debug symbols
[profile.bench]
inherits = "release"
debug = true
strip = false
