[package]
name = "brutifi"
version = "1.14.1"
edition = "2021"
description = "Cute and powerful WiFi security testing tool with real-time feedback"
license = "MIT"
repository = "https://github.com/maxgfr/bruteforce-wifi"
authors = ["maxgfr"]

[[bin]]
name = "brutifi"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
rayon = "1.8"
num_cpus = "1.16"
parking_lot = "0.12"
regex = "1.10"

# Cryptography for WPA/WPA2 handshake cracking
# Using pure software implementations for maximum compatibility (no SIMD that can crash)
hmac = { version = "0.12", default-features = false }
sha1 = { version = "0.10", default-features = false, features = ["force-soft"] }
sha2 = { version = "0.10", default-features = false, features = ["force-soft"] }
md-5 = { version = "0.10", default-features = false, features = ["force-soft"] }
aes = { version = "0.8", default-features = false }
cmac = { version = "0.7", default-features = false }
digest = { version = "0.10", default-features = false }
# PBKDF2 with software-only SHA
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# PCAP file parsing
ctrlc = "3.5.1"
pcap = "2.4.0"

# System calls for macOS
libc = "0.2"

# GUI dependencies (Iced)
iced = { version = "0.13.1", features = ["tokio", "advanced", "image"] }
rfd = "0.15"
image = "0.24"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
incremental = false
debug = false
debug-assertions = false
rpath = false

# Maximum performance profile for cracking
[profile.release-crack]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

# Profile for development with some optimizations
[profile.dev]
opt-level = 1
lto = false
codegen-units = 256
incremental = true
debug = true

# Profile for benchmarking with debug symbols
[profile.bench]
inherits = "release"
debug = true
strip = false
